--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -159,8 +159,8 @@ jobs:
           ls
           mkdir -p sing-rule/geo/geosite && mkdir -p sing-rule/geo/geoip
           cd convert
-          go run ./ geosite -f ./geosite-build/publish/geosite.dat -o ../sing-rule/geo/geosite -t sing-box
-          go run ./ geoip -f ../geoip.dat -o ../sing-rule/geo/geoip -t sing-box
+          go run ./ geosite -f ../geosite-build/publish/geosite.dat -o ../output -t sing-box
+          go run ./ geoip -f ../output/geoip.dat -o ../output -t sing-box
           ls
           echo "convert"
           ls convert
