--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,33 +157,11 @@ jobs:
           NO_SKIP: true
         run: |
           ls
-          mkdir -p sing-rule/geo/geosite && mkdir -p sing-rule/geo/geoip
           cd convert
           go run ./ geosite -f ../geosite-build/publish/geosite.dat -o ../output -t sing-box
           go run ./ geoip -f ../output/geoip.dat -o ../output -t sing-box
           ls
-
-      - name: Convert geo-lite to sing-rule-set
-        env:
-          NO_SKIP: true
-        run: |
-          ls
-          mkdir -p sing-rule/geo-lite/geosite && mkdir -p sing-rule/geo-lite/geoip
-          cd convert
-          go run ./ geosite -f ../community/geosite-lite.dat -o ../sing-rule/geo-lite/geosite -t sing-box
-          go run ./ geoip -f ../geoip-lite.dat -o ../sing-rule/geo-lite/geoip -t sing-box
-          ls
-
-      - name: Convert ASN
-        env:
-          NO_SKIP: true
-        run: |
-          ls
-          mkdir -p meta-rule/asn && mkdir -p sing-rule/asn
-          cd convert
-          wget https://raw.githubusercontent.com/xishang0128/geoip/release/GeoLite2-ASN.mmdb
-          go run ./ asn -o ../meta-rule/asn
-          go run ./ asn -o ../sing-rule/asn -t sing-box
+          echo "folder output"
           ls
 
       # Pindahkan berkas hasil build
