--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -177,11 +177,11 @@ jobs:
           git init
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git checkout -b sing
+          git checkout -b sing-box
           git add .
           git commit -m "Released on ${{ env.BUILDTIME }}"
           git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
-          git push -f -u origin sing
+          git push -f -u origin sing-box
 
       # Pindahkan berkas hasil build
       - name: Move files
