--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,10 +49,10 @@ jobs:
         run: |
           mkdir -p publish
           mkdir -p output
-          # curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./geoip-build/asset/GeoLite2-ASN.tar.gz
-          # curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./geoip-build/asset/GeoLite2-ASN-CSV.zip
-          # curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./geoip-build/asset/GeoLite2-Country.tar.gz
-          # curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./geoip-build/asset/GeoLite2-Country-CSV.zip
+          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./geoip-build/asset/GeoLite2-ASN.tar.gz
+          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./geoip-build/asset/GeoLite2-ASN-CSV.zip
+          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./geoip-build/asset/GeoLite2-Country.tar.gz
+          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./geoip-build/asset/GeoLite2-Country-CSV.zip
 
       # Push downloaded GeoLite2 files
       - name: Commit and Push Changes
@@ -145,43 +145,43 @@ jobs:
           cp raven_nsfw ../community/data/raven_nsfw
           go run ./ --datapath=../community/data
 
-      # Build Sing-Box asset
-      - name: Checkout MetaCubeX/meta-rules-converter
-        uses: actions/checkout@v4
-        with:
-          repository: MetaCubeX/meta-rules-converter
-          path: convert
-
-      - name: Convert geo to sing-rule-set
-        env:
-          NO_SKIP: true
-        run: |
-          mkdir -p sing-rule/geo/geosite && mkdir -p sing-rule/geo/geoip
-          cd convert
-          go run ./ geosite -f ../geosite-build/publish/geosite.dat -o ../sing-rule/geo/geosite -t sing-box
-          go run ./ geoip -f ../output/geoip.dat -o ../sing-rule/geo/geoip -t sing-box
-
-      - name: Convert ASN
-        env:
-          NO_SKIP: true
-        run: |
-          mkdir -p meta-rule/asn && mkdir -p sing-rule/asn
-          cd convert
-          cp ../output/GeoLite2-ASN.mmdb .
-          go run ./ asn -o ../meta-rule/asn
-          go run ./ asn -o ../sing-rule/asn -t sing-box
-
-      - name: Git push assets to "sing-rule" branch
-        run: |
-          cd sing-rule || exit 1
-          git init
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git checkout -b sing-box
-          git add .
-          git commit -m "Released on ${{ env.BUILDTIME }}"
-          git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
-          git push -f -u origin sing-box
+#      # Build Sing-Box asset
+#      - name: Checkout MetaCubeX/meta-rules-converter
+#        uses: actions/checkout@v4
+#        with:
+#          repository: MetaCubeX/meta-rules-converter
+#          path: convert
+#
+#      - name: Convert geo to sing-rule-set
+#        env:
+#          NO_SKIP: true
+#        run: |
+#          mkdir -p sing-rule/geo/geosite && mkdir -p sing-rule/geo/geoip
+#          cd convert
+#          go run ./ geosite -f ../geosite-build/publish/geosite.dat -o ../sing-rule/geo/geosite -t sing-box
+#          go run ./ geoip -f ../output/geoip.dat -o ../sing-rule/geo/geoip -t sing-box
+#
+#      - name: Convert ASN
+#        env:
+#          NO_SKIP: true
+#        run: |
+#          mkdir -p meta-rule/asn && mkdir -p sing-rule/asn
+#          cd convert
+#          cp ../output/GeoLite2-ASN.mmdb .
+#          go run ./ asn -o ../meta-rule/asn
+#          go run ./ asn -o ../sing-rule/asn -t sing-box
+#
+#      - name: Git push assets to "sing-rule" branch
+#        run: |
+#          cd sing-rule || exit 1
+#          git init
+#          git config --local user.name "github-actions[bot]"
+#          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+#          git checkout -b sing-box
+#          git add .
+#          git commit -m "Released on ${{ env.BUILDTIME }}"
+#          git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+#          git push -f -u origin sing-box
 
       # Pindahkan berkas hasil build
       - name: Move files
