--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -173,9 +173,10 @@ jobs:
           echo '  ]' >> nice.json
           echo '}' >> nice.json
           ls
-          echo "ls sing-rule/geo/geoip"
+          echo "SATUUUUUUUUUUUUU"
           ls sing-rule/geo/geoip
-          echo "ls ../sing-rule/geo/geoip"
+          echo "DUAAAAAAAAAAAAAA"
+          ls ../sing-rule/geo/geoip
           # cp nice.json ../sing-rule/geo/geoip/nice.json
           cd convert
           go run ./ geosite -f ../geosite-build/publish/geosite.dat -o ../sing-rule/geo/geosite -t sing-box
