--- a/.github/workflows/get_geoasset.yml
+++ b/.github/workflows/get_geoasset.yml
@@ -9,7 +9,7 @@ permissions:
   contents: write
 
 jobs:
-  download:
+  Download:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout codebase
