--- a/.github/workflows/get_geoasset.yml
+++ b/.github/workflows/get_geoasset.yml
@@ -10,8 +10,14 @@ permissions:
 
 jobs:
   Download:
+    name: Download GEO Asset
     runs-on: ubuntu-latest
     steps:
+      - name: Set variables
+        run: |
+          export TZ="Asia/Jakarta"
+          echo "BUILDTIME=$(TZ=Asia/Jakarta date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
+
       - name: Checkout codebase
         uses: actions/checkout@v4
         with:
