--- a/geoip-build/config.json
+++ b/geoip-build/config.json
@@ -79,7 +79,7 @@
       "action": "add",
       "args": {
         "name": "lokal",
-        "uri": "./asset/lokal.txt",
+        "uri": "./lokal.txt",
         "onlyIPType": "ipv4"
       }
     },
