--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -52,12 +52,11 @@ jobs:
 
       - name: Prepare GeoLite2 databases
         run: |
+          mkdir -p output
           cd geoip-build
-          cp lokal.txt ../output/
           # cp ../asset/* ../output/
           # mkdir -p geolite2
           cp ../asset/{*.gz,*.zip} ./
-          echo "debug"; ls
           
           unzip GeoLite2-Country-CSV.zip
           unzip GeoLite2-ASN-CSV.zip
@@ -68,6 +67,9 @@ jobs:
           cp GeoLite2-ASN_*/*.mmdb ../output/
           cp GeoLite2-Country-CSV_*/{GeoLite2-Country-Blocks-*,GeoLite2-Country-Locations-en}.csv ../output/
           cp GeoLite2-ASN-CSV_*/*.csv ../output/
+
+          echo "debug ls"; ls
+          echo "debug output"; ls output
 
           # cp GeoLite2-Country-CSV_*/*.csv ./geolite2/
           # cp GeoLite2-ASN-CSV_*/*.csv ./geolite2/
