--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -4,6 +4,9 @@ on:
     - cron: "0 17 */2 * *"
   workflow_dispatch:
   repository_dispatch:
+  push:
+    branches:
+      - main
 
 permissions:
   contents: write
