--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -56,22 +56,13 @@ jobs:
       - name: Prepare GeoLite2 databases
         run: |
           cd geoip-build
-          cp ./asset/* ../output/
-          mkdir -p geolite2
-          cp ../output/{*.gz,*.zip} ./
+          # mkdir -p geolite2
           
-          unzip GeoLite2-Country-CSV.zip
-          unzip GeoLite2-ASN-CSV.zip
-          tar -xvzf GeoLite2-Country.tar.gz
-          tar -xvzf GeoLite2-ASN.tar.gz
-          
-          cp GeoLite2-Country_*/*.mmdb ../output/
-          cp GeoLite2-ASN_*/*.mmdb ../output/
-          cp GeoLite2-Country-CSV_*/{GeoLite2-Country-Blocks-*,GeoLite2-Country-Locations-en}.csv ../output/
-          cp GeoLite2-ASN-CSV_*/*.csv ../output/
+          unzip ../output/*.zip
+          tar -xvzf ../output/*.gz
 
-          cp GeoLite2-Country-CSV_*/*.csv ./geolite2/
-          cp GeoLite2-ASN-CSV_*/*.csv ./geolite2/
+          # cp GeoLite2-Country-CSV_*/*.csv ./geolite2/
+          # cp GeoLite2-ASN-CSV_*/*.csv ./geolite2/
 
       - name: Build geoip files
         run: |
