--- a/geoip-build/config.json
+++ b/geoip-build/config.json
@@ -4,8 +4,8 @@
       "type": "maxmindGeoLite2CountryCSV",
       "action": "add",
       "args": {
-        "country": "./geoip-build/geolite2/GeoLite2-Country-Locations-en.csv",
-        "ipv4": "./geoip-build/geolite2/GeoLite2-Country-Blocks-IPv4.csv",
+        "country": "geolite2/GeoLite2-Country-Locations-en.csv",
+        "ipv4": "geolite2/GeoLite2-Country-Blocks-IPv4.csv",
         "wantedList": ["id", "cn"]
       }
     },
@@ -30,7 +30,7 @@
       "type": "maxmindGeoLite2ASNCSV",
       "action": "add",
       "args": {
-        "ipv4": "./geoip-build/geolite2/GeoLite2-ASN-Blocks-IPv4.csv",
+        "ipv4": "geolite2/GeoLite2-ASN-Blocks-IPv4.csv",
         "wantedList": {
           "facebook": ["AS63293", "AS54115", "AS32934"],
           "google": [
