--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -75,13 +75,6 @@ jobs:
           go build ./
           ./geoip convert -c ./config.json
 
-          # Verify mmdb files
-          cd ../publish
-          go install -v github.com/maxmind/mmdbverify@latest
-          for name in $(ls *.mmdb); do
-            $(go env GOPATH)/bin/mmdbverify -file ${name}
-          done
-
       # Build GEOSITE
       - name: Checkout v2fly/domain-list-community
         uses: actions/checkout@v4
@@ -159,7 +152,7 @@ jobs:
 
           cd convert
           go run ./ geosite -f ../geosite-build/publish/geosite.dat -o ../sing-rule/geo/geosite -t sing-box
-          go run ./ geoip -f ../output/geoip.dat -o ../sing-rule/geo/geoip -t sing-box
+          go run ./ geoip -f ../publish/GeoIP.dat -o ../sing-rule/geo/geoip -t sing-box
 
       - name: Convert ASN
         env:
