--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -159,9 +159,11 @@ jobs:
           NO_SKIP: true
         run: |
           mkdir -p sing-rule/asn
-          pwd
           ls
           pwd
+          ls geoip-build
+          pwd
+          ls geoip-build/asset
           cd convert
           cp geoip-build/asset/GeoLite2-ASN.mmdb .
           go run ./ asn -o ../sing-rule/asn -t sing-box
