--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -60,7 +60,7 @@ jobs:
           # Ekstrak semua .tar.gz dan .zip
           for file in *.{tar.gz,zip}; do
               if [[ $file == *.tar.gz ]]; then
-                  tar -xzf "$file"
+                  tar -xvzf "$file"
               elif [[ $file == *.zip ]]; then
                   unzip "$file"
               fi
@@ -70,12 +70,8 @@ jobs:
           mkdir -p geolite2
           cp asset/GeoLite2-Country_*/*.mmdb geolite2/
           cp asset/GeoLite2-ASN_*/*.mmdb geolite2/
-          cp asset/GeoLite2-Country-CSV_*/{GeoLite2-Country-Blocks-*,GeoLite2-Country-Locations-en}.csv geolite2/
           cp asset/GeoLite2-ASN-CSV_*/*.csv geolite2/
           cp asset/GeoLite2-Country-CSV_*/*.csv geolite2/
-          cp asset/GeoLite2-ASN-CSV_*/*.csv geolite2/
-          pwd
-          ls geolite2
 
           # Build geoip
           go build ./
@@ -165,6 +161,8 @@ jobs:
           NO_SKIP: true
         run: |
           mkdir -p sing-rule/asn
+          
+          cd convert
           cp geoip-build/geolite2/GeoLite2-ASN.mmdb .
           go run ./ asn -o ../sing-rule/asn -t sing-box
 
