--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -163,7 +163,7 @@ jobs:
           mkdir -p sing-rule/asn
           
           cd convert
-          cp geoip-build/geolite2/GeoLite2-ASN.mmdb .
+          cp ./geoip-build/geolite2/GeoLite2-ASN.mmdb .
           go run ./ asn -o ../sing-rule/asn -t sing-box
 
       - name: Git push assets to "sing-rule" branch
