--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -72,6 +72,9 @@ jobs:
           cp asset/GeoLite2-ASN_*/*.mmdb geolite2/
           cp asset/GeoLite2-ASN-CSV_*/*.csv geolite2/
           cp asset/GeoLite2-Country-CSV_*/*.csv geolite2/
+          
+          pwd
+          ls geolite2
 
           # Build geoip
           go build ./
@@ -161,8 +164,11 @@ jobs:
           NO_SKIP: true
         run: |
           mkdir -p sing-rule/asn
+          ls
           
           cd convert
+          pwd
+          ls
           cp ./geoip-build/geolite2/GeoLite2-ASN.mmdb .
           go run ./ asn -o ../sing-rule/asn -t sing-box
 
