--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -58,7 +58,6 @@ jobs:
           cd geoip-build/asset
 
           # Ekstrak semua .tar.gz dan .zip
-          pwd
           for file in *.{tar.gz,zip}; do
               if [[ $file == *.tar.gz ]]; then
                   tar -xvzf "$file"
@@ -162,10 +161,8 @@ jobs:
           NO_SKIP: true
         run: |
           mkdir -p sing-rule/asn
-          ls geoip-build
-          ls geoip-build/geolite2
+          cp geoip-build/geolite2/GeoLite2-ASN.mmdb convert/
           cd convert
-          cp ./geoip-build/geolite2/GeoLite2-ASN.mmdb .
           go run ./ asn -o ../sing-rule/asn -t sing-box
 
       - name: Git push assets to "sing-rule" branch
