--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -12,15 +12,17 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Setup environment & checkout
+      - name: Checkout main repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-      - run: |
+
+      - name: Setup environment & download asset
+        run: |
           export TZ="Asia/Jakarta"
           echo "TAG_NAME=$(date +'%d%m%Y-%H%M')" >> $GITHUB_ENV
           echo "BUILDTIME=$(date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
